k8s/be-deployment.yaml
# --- Service for Backend ---
apiVersion: v1
kind: Service
metadata:
  name: pmm-be-service
  namespace: pmm-app
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: pmm-be

---
# --- Deployment for Backend ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pmm-be-deployment
  namespace: pmm-app
spec:
  replicas: 1 # Add pod
  selector:
    matchLabels:
      app: pmm-be
  template:
    metadata:
      labels:
        app: pmm-be
    spec:
      containers:
        - name: pmm-be
          image: chitipatpangma/pmm_be:latest # Docker hub be name
          ports:
            - containerPort: 8080
