k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pmm-ingress
  namespace: pmm-app
  # No rewrite-target
spec:
  # ingressClassName: nginx (Enable for Local)
  rules:
    - http:
        paths:
          #Rule for fix fixed localhost in fe and be
          - path: /_next
            pathType: Prefix
            backend:
              service:
                name: pmm-fe-service
                port:
                  number: 3000


          - path: /public
            pathType: Prefix
            backend:
              service:
                name: pmm-fe-service
                port:
                  number: 3000


          - path: /
            pathType: Exact
            backend:
              service:
                name: pmm-fe-service
                port:
                  number: 3000


          - path: /
            pathType: Prefix
            backend:
              service:
                name: pmm-be-service
                port:
                  number: 8080
